@@ -28,12 +28,10 @@ cat <<EOF
 #include <stdio.h>
 #include <assert.h>
 #include <errno.h>
-#ifdef HAVE_W32_SYSTEM
-#include <windows.h>
-#endif
 
 #undef _ASSUAN_IN_LIBASSUAN /* undef to get all error codes. */
 #include "assuan.h"
+#include "assuan-defs.h"
 
 /* If true the modern gpg-error style error codes are used in the
    API. */
@@ -152,9 +150,8 @@ _assuan_error_is_eagain (assuan_error_t err)
   if ((!err_source && err == ASSUAN_Read_Error && errno == EAGAIN)
       || (err_source && (err & ((1 << 24) - 1)) == (6 | (1 << 15))))
     {
-#ifdef HAVE_W32_SYSTEM
-       Sleep (100);
-#endif
+      /* Avoid spinning by sleeping for one tenth of a second.  */
+       _assuan_usleep (100000);
        return 1;
     }
   else
